# port-libvips

./: .gitignore  README.md  all_cves.json  dependents.json  relevant_cves.json  test-original.sh  validator-report.md
.github/workflows/: build-debs.yml
.plan/: workflow-structure.yaml
.plan/phases/: 01-real-library-handoff.md  01-update-validator-baseline.md  01-validator-bootstrap-baseline.md  02-abi-bootstrap.md  02-source-api-surface.md  02-source-surface-failures.md  03-operation-semantics.md  03-ruby-usage-operation-failures.md  03-runtime-registry.md  04-foreign-io-buffer-failures.md  04-foreign-io-media.md  04-link-compat-cpp.md  05-core-compute-ops.md  05-packaging-container-remaining-failures.md  05-packaging-container-remaining.md  06-advanced-ops.md  06-final-clean-run-report.md  06-final-report-clean-run.md  07-foreign-stack.md  08-packaging-dependents.md  09-final-fixups.md
original/debian/: control  copyright  libvips-doc.doc-base.gtk-doc  libvips-doc.links  libvips-doc.maintscript  rules
original/test/test-suite/: test_conversion.py  test_foreign.py
packaging/: package.env
safe/: Cargo.toml  PORT.md  build.rs  meson.build
safe/build_support/: api_shim.c  colour_module_compat.c  freqfilt_module_compat.c  heif_module_compat.c  magick_module_compat.c  module_stub.c  module_wrapper.c.in  vips-cpp.pc.in  vips.pc.in
safe/debian/: README.Debian  README.source  clean  control  gir1.2-vips-8.0.install  libvips-dev.examples  libvips-dev.install  libvips-doc.doc-base.api  libvips-doc.install  libvips-tools.install  libvips42t64.install  libvips42t64.lintian-overrides  libvips42t64.shlibs  not-installed  rules  watch
safe/reference/: operations.json  types.json
safe/reference/abi/: core-bootstrap.symbols
safe/scripts/: check_introspection.sh  compare_module_registry.py  compare_symbols.py  extract_introspection.py  extract_reference.py  link_compat.sh  run_release_gate.sh
safe/src/: lib.rs
safe/src/abi/: basic.rs  connection.rs  image.rs  mod.rs  object.rs  operation.rs  region.rs  type.rs
safe/src/foreign/: base.rs  metadata.rs  mod.rs  modules.rs  sniff.rs
safe/src/foreign/loaders/: container.rs  external.rs  jpeg.rs  legacy_vips.rs  mod.rs  raster.rs
safe/src/foreign/savers/: container.rs  mod.rs  raster.rs  text.rs
safe/src/ops/: arithmetic.rs  colour.rs  conversion.rs  convolution.rs  create.rs  draw.rs  freqfilt.rs  histogram.rs  mod.rs  morphology.rs  mosaicing.rs  resample.rs
safe/src/pixels/: format.rs  iter.rs  kernel.rs  mod.rs
safe/src/runtime/: buf.rs  cache.rs  connection.rs  dbuf.rs  error.rs  generate.rs  header.rs  image.rs  init.rs  memory.rs  mod.rs  object.rs  operation.rs  rect.rs  region.rs  sbuf.rs  source.rs  target.rs  threadpool.rs  type.rs  vips_native.rs
safe/src/simd/: mod.rs  reduce.rs  vector.rs
safe/tests/: abi_layout.rs  init_version_smoke.rs  operation_registry.rs  ops_advanced.rs  ops_core.rs  runtime_io.rs  security.rs  threading.rs
safe/tests/dependents/: lib.sh
safe/tests/link_compat/: vips_cpp_smoke.cpp
safe/tests/security/: cve_2018_7998.rs  cve_2019_6976.rs  cve_2021_27847.rs  cve_2023_40032.rs  cve_2026_3146.rs  cve_2026_3284.rs
safe/tests/upstream/: manifest.json  run-fuzz-suite.sh  run-meson-suite.sh  run-pytest-suite.sh  run-shell-suite.sh
safe/tools/: meson.build
scripts/: build-debs.sh  install-build-deps.sh
scripts/lib/: build-deb-common.sh
