[package]
name = "vips"
version = "8.15.1"
edition = "2021"
rust-version = "1.78"
build = "build.rs"

[lib]
name = "vips"
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = [
    "deprecated",
    "examples",
    "cplusplus",
    "nsgif",
    "ppm",
    "analyze",
    "radiance",
]
deprecated = []
examples = []
cplusplus = []
doxygen = []
gtk_doc = []
modules = []
introspection = []
vapi = []
cfitsio = []
cgif = []
exif = []
fftw = []
fontconfig = []
archive = []
heif = []
heif-module = []
imagequant = []
jpeg = []
jpeg-xl = []
jpeg-xl-module = []
lcms = []
magick = []
magick-module = []
matio = []
nifti = []
openexr = []
openjpeg = []
openslide = []
openslide-module = []
highway = []
orc = []
pangocairo = []
pdfium = []
png = []
poppler = []
poppler-module = []
quantizr = []
rsvg = []
spng = []
tiff = []
webp = []
zlib = []
nsgif = []
ppm = []
analyze = []
radiance = []

[dependencies]
gio-sys = "0.22"
glib-sys = "0.18"
gobject-sys = "0.18"
libc = "0.2"
jpeg-decoder = { version = "0.3", default-features = false }
png = "0.17"

[build-dependencies]
cc = "1"
pkg-config = "0.3"
regex = "1"
serde_json = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
